# DolasNew

./: CMakeLists.txt
HLSL/: Triangle.hlsl  Triangle.hlsli
backup/: GameApp.cpp  GameApp.h  Mesh.cpp  Mesh.h  ShaderManager.h  WindowsPlatform.cpp  WindowsPlatform.h
include/: Common.h  D3D11RHI.h  Dolas.h  DolasBase.h  DolasCommon.h  DolasSupport.h  GameApp.h  Mesh.h  RenderPrimitive.h  RenderPrimitiveManager.h  ShaderManager.h  VertexDeclaration.h  WindowsPlatform.h
scripts/: generateDolasObject.py
shaders/: CMakeLists.txt  Triangle.hlsl
source/: D3D11RHI.cpp  Dolas.cpp  GameApp.cpp  Main.cpp  Mesh.cpp  RenderPrimitive.cpp  RenderPrimitiveManager.cpp  ShaderManager.cpp  WindowsPlatform.cpp
